--- a/css/index.css
+++ b/css/index.css
@@ -173,19 +173,22 @@ header{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    padding: 10px 0;
+    padding: 10px 10px;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 6, 0.256);
 }
 .photo_de_larticle{
-    height: 340px;
+    height: 400px;
+    width: 90%;
 }
 .photo_de_larticle img{
     height: 100%;
+    width: 100%;
     border-radius: 8px;   
 }
 .titre_sous_titre{
     display: flex;
-    margin-top: 15px;
+    justify-content: center;
+    width: 90%;
     flex-direction: column;
     gap: 4px;
 }
@@ -232,10 +235,6 @@ header{
 }
 .autr img{
     height: 100%;
-}
-.telecharger a{
-    text-decoration: none;
-    color: black;
 }
 /*actualite fin*/
 
