--- a/css/a_propos.css
+++ b/css/a_propos.css
@@ -110,7 +110,7 @@ header{
 .notremission{
     background-color: white;
     width: 100%;
-    height: 450px;
+    height: auto;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 6, 0.096);
 }
 .element {
@@ -128,6 +128,7 @@ header{
     height: 100%;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
 }
 .iconettexte .iconette{
     width: 300px;
@@ -359,3 +360,62 @@ footer .conteneurf{
     color: black;
 }
 /*footer fin*/
+@media only screen and (max-width: 600px) {
+    main{
+    padding: 20px;
+    gap: 20px;
+}
+    .barblanche nav ul{
+    display: none;
+    list-style: none;
+    gap: 25px;
+}
+/*gauche*/
+.gauche {
+    float: left;
+    width: 100%;
+}
+/*droite*/
+.droite{
+    display: none;
+    float: right;
+    width: 40%;
+    height: 115%;
+}
+.Apropos .droite{
+  display: none;
+}
+.contact .gauche{
+    display: none;
+}
+.bareinscription{
+    height: auto;
+    margin: 0;
+
+   
+}
+.bareinscription .text{
+    width: 100%;
+    padding: 0;
+}
+.iconettexte {
+   padding: 10px;
+}
+.iconettexte p{
+   width:100%;
+}
+footer{
+    background-color: white;
+    height: auto;
+    width: 100%;
+}
+footer .conteneurf{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    height: 100%;
+    width: 90%;
+    padding: 0px;
+}
+}
